e2e working but build is broken due to rc2 issue

--- a/TodoApp.API/appsettings.json
+++ b/TodoApp.API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TodoDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TodoDb;"
-  }
+  },
+  "ApplicationMapNodeName": "API"
 }
