--- a/TodoApp.Web/appsettings.json
+++ b/TodoApp.Web/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrlBase": "http://localhost:5000"
+  "ApiUrlBase": "http://localhost:5000",
+  "ApplicationMapNodeName": "Web"
 }
