--- a/TodoApp.Web.BlazorServer/appsettings.json
+++ b/TodoApp.Web.BlazorServer/appsettings.json
@@ -7,5 +7,5 @@
   },
   "AllowedHosts": "*",
   "ApiUrlBase": "http://localhost:5000",
-  "ApplicationMapNodeName": "Razor"
+  "ApplicationMapNodeName": "Blazor Server"
 }
