--- a/TodoApp.Web.BlazorServer/appsettings.Development.json
+++ b/TodoApp.Web.BlazorServer/appsettings.Development.json
@@ -1,11 +1,9 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ApiUrlBase": "http://localhost:5000",
-  "ApplicationMapNodeName": "Razor"
+  }
 }
