outputs added but not yet working

--- a/TodoApp.Web.BlazorServer/TodoApp.Web.BlazorServer.csproj
+++ b/TodoApp.Web.BlazorServer/TodoApp.Web.BlazorServer.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>9449c8b3-cc96-46b7-8af8-e96908874df1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
