--- a/cdk.yaml
+++ b/cdk.yaml
@@ -1,6 +1,8 @@
 name: todoapp
 services:
-  - name: todoapp325api
+  - name: ${BASENAME}api
     project: '../TodoApp.API/TodoApp.API.csproj'
-  - name: todoapp325web
+    type: app
+  - name: ${BASENAME}web
     project: '../TodoApp.Web.BlazorServer/TodoApp.Web.BlazorServer.csproj'
+    type: app
