--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # TodoApp-specific files
-api.zip
-web.zip
+*.zip
 
 # User-specific files
 *.rsuser
