htmx client working removed sorting (the "dancing rows" was irritating) changed port numbers for the apps

--- a/TodoApp.API/appsettings.json
+++ b/TodoApp.API/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "TodoDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TodoDb;"
   },
-  "ApplicationMapNodeName": "API"
+  "ApplicationMapNodeName": "API",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=cbc60baa-5748-49ec-aef3-8f5408f95af3;IngestionEndpoint=https://centralus-0.in.applicationinsights.azure.com/"
+  }
 }
