--- a/TodoApp.API/Properties/launchSettings.json
+++ b/TodoApp.API/Properties/launchSettings.json
@@ -4,9 +4,8 @@
     "TodoApp.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:4000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
