no idea how that got in here

--- a/TodoApp.API/appsettings.json
+++ b/TodoApp.API/appsettings.json
@@ -9,8 +9,5 @@
   "ConnectionStrings": {
     "TodoDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TodoDb;"
   },
-  "ApplicationMapNodeName": "API",
-  "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=cbc60baa-5748-49ec-aef3-8f5408f95af3;IngestionEndpoint=https://centralus-0.in.applicationinsights.azure.com/"
-  }
+  "ApplicationMapNodeName": "API"
 }
