switched to container apps

--- a/TodoApp.API/appsettings.json
+++ b/TodoApp.API/appsettings.json
@@ -6,8 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TodoDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TodoDb;"
-  },
+  "TodoDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TodoDb;",
   "ApplicationMapNodeName": "API"
 }
