--- a/TodoApp.Web.BlazorServer/Properties/launchSettings.json
+++ b/TodoApp.Web.BlazorServer/Properties/launchSettings.json
@@ -2,12 +2,18 @@
   "profiles": {
     "TodoApp.Web.BlazorServer": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:4001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:4001",
+      "dotnetRunMessages": true
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
