--- a/TodoApp.Web.BlazorServer/TodoApp.Web.BlazorServer.csproj
+++ b/TodoApp.Web.BlazorServer/TodoApp.Web.BlazorServer.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TodoApp\TodoApp.csproj" />
