--- a/TodoApp.Web.Razor/TodoApp.Web.Razor.csproj
+++ b/TodoApp.Web.Razor/TodoApp.Web.Razor.csproj
@@ -5,9 +5,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Refit" Version="6.0.94" />
   </ItemGroup>
 
