--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,12 +84,12 @@ jobs:
         tags: ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
         file: ${{ env.BACKEND_DOCKER_FILE }}
 
-    # - name: Build the razor frontend and push it to ACR
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     push: true
-    #     tags: ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io/${{ env.RAZOR_IMAGE_NAME }}:${{ github.sha }}
-    #     file: ${{ env.RAZOR_DOCKER_FILE }}
+    - name: Build the razor frontend and push it to ACR
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io/${{ env.RAZOR_IMAGE_NAME }}:${{ github.sha }}
+        file: ${{ env.RAZOR_DOCKER_FILE }}
 
     # - name: Build the blazor server frontend and push it to ACR
     #   uses: docker/build-push-action@v2
@@ -98,39 +98,39 @@ jobs:
     #     tags: ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io/${{ env.BLAZOR_IMAGE_NAME }}:${{ github.sha }}
     #     file: ${{ env.BLAZOR_DOCKER_FILE }}
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
 
-  #   steps:
+    steps:
 
-  #   - name: Checkout to the branch
-  #     uses: actions/checkout@v2
+    - name: Checkout to the branch
+      uses: actions/checkout@v2
 
-  #   - name: Azure Login
-  #     uses: azure/login@v1
-  #     with:
-  #       creds: ${{ secrets.AzureSPN }}
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AzureSPN }}
 
-  #   - name: Installing Container Apps extension
-  #     uses: azure/CLI@v1
-  #     with:
-  #       inlineScript: >
-  #         echo "Installing containerapp extension"
+    - name: Installing Container Apps extension
+      uses: azure/CLI@v1
+      with:
+        inlineScript: >
+          echo "Installing containerapp extension"
 
-  #         az config set extension.use_dynamic_install=yes_without_prompt
+          az config set extension.use_dynamic_install=yes_without_prompt
 
-  #         az extension add --name containerapp --yes
+          az extension add --name containerapp --yes
 
-  #   - name: Deploy Backend
-  #     uses: azure/CLI@v1
-  #     with:
-  #       inlineScript: >
-  #         echo "Deploying Silo"
+    - name: Deploy Backend
+      uses: azure/CLI@v1
+      with:
+        inlineScript: >
+          echo "Deploying Silo"
           
-  #         az containerapp registry set -n backend -g ${{ env.RESOURCE_GROUP_NAME }} --server ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io
+          az containerapp registry set -n backend -g ${{ env.RESOURCE_GROUP_NAME }} --server ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io
 
-  #         az containerapp update -n backend -g ${{ env.RESOURCE_GROUP_NAME }} -i ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
+          az containerapp update -n backend -g ${{ env.RESOURCE_GROUP_NAME }} -i ${{ env.RESOURCE_GROUP_NAME }}acr.azurecr.io/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
 
   #   - name: Deploy Razor Frontend
   #     uses: azure/CLI@v1
